packages/kit/test/apps/basics/src/routes/errors/endpoint-throw-error/+server.js
import { error } from '@sveltejs/kit';

export function GET() {
	throw error(401, 'You shall not pass');
}
